--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- STEP 1: CODE LOGIN -->
   <div class="container" id="loginBox">
-    <h1>TakeYouToTask Notes Access</h1>
+    <h1>TakeYouToTask Notes</h1>
     <p>Please enter the Access Code</p>
 
     <input type="password" id="codeInput" placeholder="Enter access code" />
@@ -109,7 +109,7 @@
 
   <!-- STEP 2: RULES -->
   <div class="container hidden" id="rulesBox">
-    <h1>📘 Rules & Regulations</h1>
+    <h1>Rules & Regulations</h1>
 
     <div class="rules">
       <ul>
@@ -136,7 +136,7 @@
 
     <button onclick="openPDF('notes_lscience.pdf')">Life Science</button>
     <button onclick="openPDF('notes_pscience.pdf')">Physical Science</button>
-    <button onclick="openPDF('notes_studyguide.pdf')">Study Guide</button>
+    <button onclick="openPDF('notes.pdf')">History</button>
 
     <iframe id="pdfViewer" style="display:none;"></iframe>
 
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
