--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
     <!-- STEP 3: NOTES -->
   <div class="container hidden" id="pdfBox">
-    <h1>My Notes</h1>
-    <p>Select a subject 📚</p>
+    <h1>TakeYouToTask Notes</h1>
+    <p>Please select a subject.<p>
 
     <button onclick="openPDF('notes_lscience.pdf')">Life Science</button>
     <button onclick="openPDF('notes_pscience.pdf')">Physical Science</button>
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
