--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <script>
     // CHANGE YOUR SECRET CODE HERE
-    const SECRET_CODE = "TakeYouToTask001";
+    const SECRET_CODE = "Barger002";
 
     function checkCode() {
       const input = document.getElementById("codeInput").value;
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
